--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,32 @@
 
 /* Your CSS Code here. */
+
+.box {
+	border: 3px solid black;
+	width: 500px;
+	height: 300px;
+}
+
+.box1 {
+	margin: 20px;
+}
+
+.box2 {
+	border: 15px solid blue;
+}
+
+.box3 {
+	padding: 50px lightblue;
+	background-color: lightblue;
+}
+
+.box4 {
+	width: 300px;
+	border: 2px solid black;
+}
+
+.box5 {
+	text-align: left;
+	border: 2px solid black;
+	color: black; 
+}
